# torchstrap

./: .gitattributes  .gitignore  README.md  pyproject.toml
examples/spirals/: spirals_parallel.py
src/churten/: __init__.py  _ensemble.py  ensemble.py  history.py  model.py  net.py  state.py  stateless.py  utils.py
src/churten/archs/: __init__.py  nn.py  transforms.py
src/churten/callbacks/: callbacks.py  logging.py  lr_scheduler.py  scoring.py  training.py
src/churten/data/: __init__.py  dataset.py  loader.py  sampler.py
src/churten/nn/: __init__.py  archs.py
src/churten/optimizer/: __init__.py  adam.py  grad_transform.py  lr_scheduler.py
src/churten/utils/: __init__.py  _utils.py  typing.py
src/churten/utils/data/: __init__.py  sampler.py
src/churten/utils/nn/: __init__.py  archs.py  transform.py
src/torchstrap/: __init__.py  history.py  state.py  stateless.py
src/torchstrap/callbacks/: __init__.py  logging.py  lr_scheduler.py  scoring.py  training.py
src/torchstrap/optimizer/: adam.py  grad_transform.py
src/torchstrap/utils/: __init__.py  typing.py
src/torchstrap/utils/data/: __init__.py  sampler.py
src/torchstrap/utils/nn/: __init__.py  archs.py  transform.py
test/: memmap_dataset_train.py
test/backups/: adam.py.bak  grad_transform.py.bak  history.py.bak
test/det_lvl_ds/: meta.json
test/det_lvl_ds/_tensordict/: meta.json  sample_weights.memmap
test/optimizer/: test_state.py  test_state_0.py
tests/: mp_stack_memmap.py
tests/det_lvl_ds/_tensordict/: inputs.memmap  stratification.memmap  targets.memmap
