[project] 
name = "churten"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TanmayPani", email = "tanmay.pani.rutgers@gmail.com" }
]
requires-python = ">=3.13"

dependencies = [
  "numpy>=2.2.4",
  "pyarrow>=19.0.1",
  "scikit-learn>=1.6.1",
  "torch",
  "torchvision",
  "torchdata",
  "tensordict",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "pyqt5>=5.15.11",
  "pyqt6>=6.9.0",
  "pyright>=1.1.398",
  "tabulate>=0.9.0",
  "tqdm>=4.67.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129"},
]
torchvision = [
  { index = "pytorch-cu129"},
]
torchdata = [
  { index = "torchdata"},
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "torchdata"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
